--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,4 +22,4 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Deploy website
-        run: USE_SSH=true npm run deploy
+        run: GIT_USER=rjvim npm run deploy
