--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,9 @@ on:
 jobs:
   deploy:
     name: Deploy Docusaurus
+    env:
+      GIT_USER: ${{ github.actor }}
+      GIT_PASS: ${{ secrets.GITHUB_TOKEN }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -22,4 +25,4 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Deploy website
-        run: GIT_USER=rjvim npm run deploy
+        run: npm run deploy
