--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,8 @@ jobs:
     name: Deploy Docusaurus
     env:
       USE_SSH: true
+      GIT_USER: ${{ github.actor }}
+      GIT_PASS: ${{ secrets.GITHUB_TOKEN }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -24,4 +26,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Deploy website
-        run: npm run deploy
+        run: |
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+          npm run deploy
