--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,33 +1,18 @@
-name: Deploy to GitHub Pages
-
+# .github/workflows/deploy.yml
+name: Deploy PR previews
 on:
   push:
     branches:
       - main
-    # Review gh actions docs if you want to further define triggers, paths, etc
-    # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#on
-
 jobs:
-  deploy:
-    name: Deploy Docusaurus
-    env:
-      USE_SSH: true
-      GIT_USER: ${{ github.actor }}
-      GIT_PASS: ${{ secrets.GITHUB_TOKEN }}
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  deploy-preview:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
+      - run: npm i && npm run build
+      - uses: JamesIves/github-pages-deploy-action@v4
         with:
-          fetch-depth: 0
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 18
-          cache: npm
-      - name: Install dependencies
-        run: npm ci
-      - name: Deploy website
-        run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
-          npm run deploy
+          folder: .
+          branch: gh-pages
+          clean-exclude: pr-preview
+          force: false
