--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -19,7 +19,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install and Build
-        if: github.event.action != 'closed' # You might want to skip the build if the PR has been closed
+
+        if: github.event.action != 'closed'
+        env:
+          BASE_URL: /test-docusaurus/pr-preview/pr-${{ github.ref }}
         run: |
           npm install
           npm run build
