--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -22,6 +22,7 @@ jobs:
 
         if: github.event.action != 'closed'
         env:
+          PR_NUMBER: ${{ github.ref_name }}
           BASE_URL: /test-docusaurus/pr-preview/pr-${{ github.ref }}
         run: |
           npm install
